// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourProfileView _getForm should return default values because \`currentUser\` is empty 1`] = `
Object {
  "bio": "",
  "email": "",
  "language": "",
  "name": "",
  "password_confirmation": null,
  "timezone": "",
}
`;

exports[`YourProfileView _getForm should return form values because \`currentUser\` is not empty 1`] = `
Object {
  "bio": "CTO",
  "email": "alex@gorgias.io",
  "language": "en",
  "name": "Alex Plugaru",
  "profilePictureUrl": undefined,
  "timezone": "EST",
}
`;

exports[`YourProfileView _handleSubmit should submit user data 1`] = `
Array [
  Array [
    Object {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "language": "en",
      "name": "Alex Plugaru",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _handleSubmit should submit user data and reset the password confirmation field because the email field was marked as changed 1`] = `
Array [
  Array [
    Object {
      "bio": "CTO",
      "email": "alex@gorgias.io",
      "language": "en",
      "name": "Alex Plugaru",
      "password_confirmation": "a-password",
      "timezone": "EST",
    },
  ],
]
`;

exports[`YourProfileView _saveProfilePicture should save profile picture 1`] = `
Array [
  Array [
    Object {
      "meta": Object {
        "profile_picture_url": "https://config.gorgias.io/production/blabla",
      },
    },
  ],
]
`;

exports[`YourProfileView render should render current user profile form 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Your profile"
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Update your profile information.
    </p>
    <Form
      className="mb-4"
      onSubmit={[Function]}
      tag="form"
    >
      <Row
        tag="div"
      >
        <Col
          md="9"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <InputField
            label="Your name"
            name="name"
            onChange={[Function]}
            placeholder="John Doe"
            required={true}
            type="text"
            value="Alex Plugaru"
          />
          <InputField
            label="Your email"
            name="email"
            onChange={[Function]}
            placeholder="john.doe@acme.com"
            required={true}
            type="email"
            value="alex@gorgias.io"
          />
          <InputField
            help={
              <span>
                Your bio can be used in signatures as a variable. Admins can set up signatures
                 
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/email"
                >
                  in each email integration
                </Link>
              </span>
            }
            label="Your bio"
            name="bio"
            onChange={[Function]}
            type="text"
            value="CTO"
          />
          <InputField
            label="Timezone"
            name="timezone"
            onChange={[Function]}
            type="select"
            value="EST"
          >
            <option
              key="0"
              value="Africa/Abidjan"
            >
              Africa/Abidjan
            </option>
            <option
              key="1"
              value="Africa/Accra"
            >
              Africa/Accra
            </option>
            <option
              key="2"
              value="Africa/Addis_Ababa"
            >
              Africa/Addis_Ababa
            </option>
            <option
              key="3"
              value="Africa/Algiers"
            >
              Africa/Algiers
            </option>
            <option
              key="4"
              value="Africa/Asmara"
            >
              Africa/Asmara
            </option>
            <option
              key="5"
              value="Africa/Asmera"
            >
              Africa/Asmera
            </option>
            <option
              key="6"
              value="Africa/Bamako"
            >
              Africa/Bamako
            </option>
            <option
              key="7"
              value="Africa/Bangui"
            >
              Africa/Bangui
            </option>
            <option
              key="8"
              value="Africa/Banjul"
            >
              Africa/Banjul
            </option>
            <option
              key="9"
              value="Africa/Bissau"
            >
              Africa/Bissau
            </option>
            <option
              key="10"
              value="Africa/Blantyre"
            >
              Africa/Blantyre
            </option>
            <option
              key="11"
              value="Africa/Brazzaville"
            >
              Africa/Brazzaville
            </option>
            <option
              key="12"
              value="Africa/Bujumbura"
            >
              Africa/Bujumbura
            </option>
            <option
              key="13"
              value="Africa/Cairo"
            >
              Africa/Cairo
            </option>
            <option
              key="14"
              value="Africa/Casablanca"
            >
              Africa/Casablanca
            </option>
            <option
              key="15"
              value="Africa/Ceuta"
            >
              Africa/Ceuta
            </option>
            <option
              key="16"
              value="Africa/Conakry"
            >
              Africa/Conakry
            </option>
            <option
              key="17"
              value="Africa/Dakar"
            >
              Africa/Dakar
            </option>
            <option
              key="18"
              value="Africa/Dar_es_Salaam"
            >
              Africa/Dar_es_Salaam
            </option>
            <option
              key="19"
              value="Africa/Djibouti"
            >
              Africa/Djibouti
            </option>
            <option
              key="20"
              value="Africa/Douala"
            >
              Africa/Douala
            </option>
            <option
              key="21"
              value="Africa/El_Aaiun"
            >
              Africa/El_Aaiun
            </option>
            <option
              key="22"
              value="Africa/Freetown"
            >
              Africa/Freetown
            </option>
            <option
              key="23"
              value="Africa/Gaborone"
            >
              Africa/Gaborone
            </option>
            <option
              key="24"
              value="Africa/Harare"
            >
              Africa/Harare
            </option>
            <option
              key="25"
              value="Africa/Johannesburg"
            >
              Africa/Johannesburg
            </option>
            <option
              key="26"
              value="Africa/Juba"
            >
              Africa/Juba
            </option>
            <option
              key="27"
              value="Africa/Kampala"
            >
              Africa/Kampala
            </option>
            <option
              key="28"
              value="Africa/Khartoum"
            >
              Africa/Khartoum
            </option>
            <option
              key="29"
              value="Africa/Kigali"
            >
              Africa/Kigali
            </option>
            <option
              key="30"
              value="Africa/Kinshasa"
            >
              Africa/Kinshasa
            </option>
            <option
              key="31"
              value="Africa/Lagos"
            >
              Africa/Lagos
            </option>
            <option
              key="32"
              value="Africa/Libreville"
            >
              Africa/Libreville
            </option>
            <option
              key="33"
              value="Africa/Lome"
            >
              Africa/Lome
            </option>
            <option
              key="34"
              value="Africa/Luanda"
            >
              Africa/Luanda
            </option>
            <option
              key="35"
              value="Africa/Lubumbashi"
            >
              Africa/Lubumbashi
            </option>
            <option
              key="36"
              value="Africa/Lusaka"
            >
              Africa/Lusaka
            </option>
            <option
              key="37"
              value="Africa/Malabo"
            >
              Africa/Malabo
            </option>
            <option
              key="38"
              value="Africa/Maputo"
            >
              Africa/Maputo
            </option>
            <option
              key="39"
              value="Africa/Maseru"
            >
              Africa/Maseru
            </option>
            <option
              key="40"
              value="Africa/Mbabane"
            >
              Africa/Mbabane
            </option>
            <option
              key="41"
              value="Africa/Mogadishu"
            >
              Africa/Mogadishu
            </option>
            <option
              key="42"
              value="Africa/Monrovia"
            >
              Africa/Monrovia
            </option>
            <option
              key="43"
              value="Africa/Nairobi"
            >
              Africa/Nairobi
            </option>
            <option
              key="44"
              value="Africa/Ndjamena"
            >
              Africa/Ndjamena
            </option>
            <option
              key="45"
              value="Africa/Niamey"
            >
              Africa/Niamey
            </option>
            <option
              key="46"
              value="Africa/Nouakchott"
            >
              Africa/Nouakchott
            </option>
            <option
              key="47"
              value="Africa/Ouagadougou"
            >
              Africa/Ouagadougou
            </option>
            <option
              key="48"
              value="Africa/Porto-Novo"
            >
              Africa/Porto-Novo
            </option>
            <option
              key="49"
              value="Africa/Sao_Tome"
            >
              Africa/Sao_Tome
            </option>
            <option
              key="50"
              value="Africa/Timbuktu"
            >
              Africa/Timbuktu
            </option>
            <option
              key="51"
              value="Africa/Tripoli"
            >
              Africa/Tripoli
            </option>
            <option
              key="52"
              value="Africa/Tunis"
            >
              Africa/Tunis
            </option>
            <option
              key="53"
              value="Africa/Windhoek"
            >
              Africa/Windhoek
            </option>
            <option
              key="54"
              value="America/Adak"
            >
              America/Adak
            </option>
            <option
              key="55"
              value="America/Anchorage"
            >
              America/Anchorage
            </option>
            <option
              key="56"
              value="America/Anguilla"
            >
              America/Anguilla
            </option>
            <option
              key="57"
              value="America/Antigua"
            >
              America/Antigua
            </option>
            <option
              key="58"
              value="America/Araguaina"
            >
              America/Araguaina
            </option>
            <option
              key="59"
              value="America/Argentina/Buenos_Aires"
            >
              America/Argentina/Buenos_Aires
            </option>
            <option
              key="60"
              value="America/Argentina/Catamarca"
            >
              America/Argentina/Catamarca
            </option>
            <option
              key="61"
              value="America/Argentina/ComodRivadavia"
            >
              America/Argentina/ComodRivadavia
            </option>
            <option
              key="62"
              value="America/Argentina/Cordoba"
            >
              America/Argentina/Cordoba
            </option>
            <option
              key="63"
              value="America/Argentina/Jujuy"
            >
              America/Argentina/Jujuy
            </option>
            <option
              key="64"
              value="America/Argentina/La_Rioja"
            >
              America/Argentina/La_Rioja
            </option>
            <option
              key="65"
              value="America/Argentina/Mendoza"
            >
              America/Argentina/Mendoza
            </option>
            <option
              key="66"
              value="America/Argentina/Rio_Gallegos"
            >
              America/Argentina/Rio_Gallegos
            </option>
            <option
              key="67"
              value="America/Argentina/Salta"
            >
              America/Argentina/Salta
            </option>
            <option
              key="68"
              value="America/Argentina/San_Juan"
            >
              America/Argentina/San_Juan
            </option>
            <option
              key="69"
              value="America/Argentina/San_Luis"
            >
              America/Argentina/San_Luis
            </option>
            <option
              key="70"
              value="America/Argentina/Tucuman"
            >
              America/Argentina/Tucuman
            </option>
            <option
              key="71"
              value="America/Argentina/Ushuaia"
            >
              America/Argentina/Ushuaia
            </option>
            <option
              key="72"
              value="America/Aruba"
            >
              America/Aruba
            </option>
            <option
              key="73"
              value="America/Asuncion"
            >
              America/Asuncion
            </option>
            <option
              key="74"
              value="America/Atikokan"
            >
              America/Atikokan
            </option>
            <option
              key="75"
              value="America/Atka"
            >
              America/Atka
            </option>
            <option
              key="76"
              value="America/Bahia"
            >
              America/Bahia
            </option>
            <option
              key="77"
              value="America/Bahia_Banderas"
            >
              America/Bahia_Banderas
            </option>
            <option
              key="78"
              value="America/Barbados"
            >
              America/Barbados
            </option>
            <option
              key="79"
              value="America/Belem"
            >
              America/Belem
            </option>
            <option
              key="80"
              value="America/Belize"
            >
              America/Belize
            </option>
            <option
              key="81"
              value="America/Blanc-Sablon"
            >
              America/Blanc-Sablon
            </option>
            <option
              key="82"
              value="America/Boa_Vista"
            >
              America/Boa_Vista
            </option>
            <option
              key="83"
              value="America/Bogota"
            >
              America/Bogota
            </option>
            <option
              key="84"
              value="America/Boise"
            >
              America/Boise
            </option>
            <option
              key="85"
              value="America/Buenos_Aires"
            >
              America/Buenos_Aires
            </option>
            <option
              key="86"
              value="America/Cambridge_Bay"
            >
              America/Cambridge_Bay
            </option>
            <option
              key="87"
              value="America/Campo_Grande"
            >
              America/Campo_Grande
            </option>
            <option
              key="88"
              value="America/Cancun"
            >
              America/Cancun
            </option>
            <option
              key="89"
              value="America/Caracas"
            >
              America/Caracas
            </option>
            <option
              key="90"
              value="America/Catamarca"
            >
              America/Catamarca
            </option>
            <option
              key="91"
              value="America/Cayenne"
            >
              America/Cayenne
            </option>
            <option
              key="92"
              value="America/Cayman"
            >
              America/Cayman
            </option>
            <option
              key="93"
              value="America/Chicago"
            >
              America/Chicago
            </option>
            <option
              key="94"
              value="America/Chihuahua"
            >
              America/Chihuahua
            </option>
            <option
              key="95"
              value="America/Coral_Harbour"
            >
              America/Coral_Harbour
            </option>
            <option
              key="96"
              value="America/Cordoba"
            >
              America/Cordoba
            </option>
            <option
              key="97"
              value="America/Costa_Rica"
            >
              America/Costa_Rica
            </option>
            <option
              key="98"
              value="America/Creston"
            >
              America/Creston
            </option>
            <option
              key="99"
              value="America/Cuiaba"
            >
              America/Cuiaba
            </option>
            <option
              key="100"
              value="America/Curacao"
            >
              America/Curacao
            </option>
            <option
              key="101"
              value="America/Danmarkshavn"
            >
              America/Danmarkshavn
            </option>
            <option
              key="102"
              value="America/Dawson"
            >
              America/Dawson
            </option>
            <option
              key="103"
              value="America/Dawson_Creek"
            >
              America/Dawson_Creek
            </option>
            <option
              key="104"
              value="America/Denver"
            >
              America/Denver
            </option>
            <option
              key="105"
              value="America/Detroit"
            >
              America/Detroit
            </option>
            <option
              key="106"
              value="America/Dominica"
            >
              America/Dominica
            </option>
            <option
              key="107"
              value="America/Edmonton"
            >
              America/Edmonton
            </option>
            <option
              key="108"
              value="America/Eirunepe"
            >
              America/Eirunepe
            </option>
            <option
              key="109"
              value="America/El_Salvador"
            >
              America/El_Salvador
            </option>
            <option
              key="110"
              value="America/Ensenada"
            >
              America/Ensenada
            </option>
            <option
              key="111"
              value="America/Fort_Nelson"
            >
              America/Fort_Nelson
            </option>
            <option
              key="112"
              value="America/Fort_Wayne"
            >
              America/Fort_Wayne
            </option>
            <option
              key="113"
              value="America/Fortaleza"
            >
              America/Fortaleza
            </option>
            <option
              key="114"
              value="America/Glace_Bay"
            >
              America/Glace_Bay
            </option>
            <option
              key="115"
              value="America/Godthab"
            >
              America/Godthab
            </option>
            <option
              key="116"
              value="America/Goose_Bay"
            >
              America/Goose_Bay
            </option>
            <option
              key="117"
              value="America/Grand_Turk"
            >
              America/Grand_Turk
            </option>
            <option
              key="118"
              value="America/Grenada"
            >
              America/Grenada
            </option>
            <option
              key="119"
              value="America/Guadeloupe"
            >
              America/Guadeloupe
            </option>
            <option
              key="120"
              value="America/Guatemala"
            >
              America/Guatemala
            </option>
            <option
              key="121"
              value="America/Guayaquil"
            >
              America/Guayaquil
            </option>
            <option
              key="122"
              value="America/Guyana"
            >
              America/Guyana
            </option>
            <option
              key="123"
              value="America/Halifax"
            >
              America/Halifax
            </option>
            <option
              key="124"
              value="America/Havana"
            >
              America/Havana
            </option>
            <option
              key="125"
              value="America/Hermosillo"
            >
              America/Hermosillo
            </option>
            <option
              key="126"
              value="America/Indiana/Indianapolis"
            >
              America/Indiana/Indianapolis
            </option>
            <option
              key="127"
              value="America/Indiana/Knox"
            >
              America/Indiana/Knox
            </option>
            <option
              key="128"
              value="America/Indiana/Marengo"
            >
              America/Indiana/Marengo
            </option>
            <option
              key="129"
              value="America/Indiana/Petersburg"
            >
              America/Indiana/Petersburg
            </option>
            <option
              key="130"
              value="America/Indiana/Tell_City"
            >
              America/Indiana/Tell_City
            </option>
            <option
              key="131"
              value="America/Indiana/Vevay"
            >
              America/Indiana/Vevay
            </option>
            <option
              key="132"
              value="America/Indiana/Vincennes"
            >
              America/Indiana/Vincennes
            </option>
            <option
              key="133"
              value="America/Indiana/Winamac"
            >
              America/Indiana/Winamac
            </option>
            <option
              key="134"
              value="America/Indianapolis"
            >
              America/Indianapolis
            </option>
            <option
              key="135"
              value="America/Inuvik"
            >
              America/Inuvik
            </option>
            <option
              key="136"
              value="America/Iqaluit"
            >
              America/Iqaluit
            </option>
            <option
              key="137"
              value="America/Jamaica"
            >
              America/Jamaica
            </option>
            <option
              key="138"
              value="America/Jujuy"
            >
              America/Jujuy
            </option>
            <option
              key="139"
              value="America/Juneau"
            >
              America/Juneau
            </option>
            <option
              key="140"
              value="America/Kentucky/Louisville"
            >
              America/Kentucky/Louisville
            </option>
            <option
              key="141"
              value="America/Kentucky/Monticello"
            >
              America/Kentucky/Monticello
            </option>
            <option
              key="142"
              value="America/Knox_IN"
            >
              America/Knox_IN
            </option>
            <option
              key="143"
              value="America/Kralendijk"
            >
              America/Kralendijk
            </option>
            <option
              key="144"
              value="America/La_Paz"
            >
              America/La_Paz
            </option>
            <option
              key="145"
              value="America/Lima"
            >
              America/Lima
            </option>
            <option
              key="146"
              value="America/Los_Angeles"
            >
              America/Los_Angeles
            </option>
            <option
              key="147"
              value="America/Louisville"
            >
              America/Louisville
            </option>
            <option
              key="148"
              value="America/Lower_Princes"
            >
              America/Lower_Princes
            </option>
            <option
              key="149"
              value="America/Maceio"
            >
              America/Maceio
            </option>
            <option
              key="150"
              value="America/Managua"
            >
              America/Managua
            </option>
            <option
              key="151"
              value="America/Manaus"
            >
              America/Manaus
            </option>
            <option
              key="152"
              value="America/Marigot"
            >
              America/Marigot
            </option>
            <option
              key="153"
              value="America/Martinique"
            >
              America/Martinique
            </option>
            <option
              key="154"
              value="America/Matamoros"
            >
              America/Matamoros
            </option>
            <option
              key="155"
              value="America/Mazatlan"
            >
              America/Mazatlan
            </option>
            <option
              key="156"
              value="America/Mendoza"
            >
              America/Mendoza
            </option>
            <option
              key="157"
              value="America/Menominee"
            >
              America/Menominee
            </option>
            <option
              key="158"
              value="America/Merida"
            >
              America/Merida
            </option>
            <option
              key="159"
              value="America/Metlakatla"
            >
              America/Metlakatla
            </option>
            <option
              key="160"
              value="America/Mexico_City"
            >
              America/Mexico_City
            </option>
            <option
              key="161"
              value="America/Miquelon"
            >
              America/Miquelon
            </option>
            <option
              key="162"
              value="America/Moncton"
            >
              America/Moncton
            </option>
            <option
              key="163"
              value="America/Monterrey"
            >
              America/Monterrey
            </option>
            <option
              key="164"
              value="America/Montevideo"
            >
              America/Montevideo
            </option>
            <option
              key="165"
              value="America/Montreal"
            >
              America/Montreal
            </option>
            <option
              key="166"
              value="America/Montserrat"
            >
              America/Montserrat
            </option>
            <option
              key="167"
              value="America/Nassau"
            >
              America/Nassau
            </option>
            <option
              key="168"
              value="America/New_York"
            >
              America/New_York
            </option>
            <option
              key="169"
              value="America/Nipigon"
            >
              America/Nipigon
            </option>
            <option
              key="170"
              value="America/Nome"
            >
              America/Nome
            </option>
            <option
              key="171"
              value="America/Noronha"
            >
              America/Noronha
            </option>
            <option
              key="172"
              value="America/North_Dakota/Beulah"
            >
              America/North_Dakota/Beulah
            </option>
            <option
              key="173"
              value="America/North_Dakota/Center"
            >
              America/North_Dakota/Center
            </option>
            <option
              key="174"
              value="America/North_Dakota/New_Salem"
            >
              America/North_Dakota/New_Salem
            </option>
            <option
              key="175"
              value="America/Ojinaga"
            >
              America/Ojinaga
            </option>
            <option
              key="176"
              value="America/Panama"
            >
              America/Panama
            </option>
            <option
              key="177"
              value="America/Pangnirtung"
            >
              America/Pangnirtung
            </option>
            <option
              key="178"
              value="America/Paramaribo"
            >
              America/Paramaribo
            </option>
            <option
              key="179"
              value="America/Phoenix"
            >
              America/Phoenix
            </option>
            <option
              key="180"
              value="America/Port-au-Prince"
            >
              America/Port-au-Prince
            </option>
            <option
              key="181"
              value="America/Port_of_Spain"
            >
              America/Port_of_Spain
            </option>
            <option
              key="182"
              value="America/Porto_Acre"
            >
              America/Porto_Acre
            </option>
            <option
              key="183"
              value="America/Porto_Velho"
            >
              America/Porto_Velho
            </option>
            <option
              key="184"
              value="America/Puerto_Rico"
            >
              America/Puerto_Rico
            </option>
            <option
              key="185"
              value="America/Rainy_River"
            >
              America/Rainy_River
            </option>
            <option
              key="186"
              value="America/Rankin_Inlet"
            >
              America/Rankin_Inlet
            </option>
            <option
              key="187"
              value="America/Recife"
            >
              America/Recife
            </option>
            <option
              key="188"
              value="America/Regina"
            >
              America/Regina
            </option>
            <option
              key="189"
              value="America/Resolute"
            >
              America/Resolute
            </option>
            <option
              key="190"
              value="America/Rio_Branco"
            >
              America/Rio_Branco
            </option>
            <option
              key="191"
              value="America/Rosario"
            >
              America/Rosario
            </option>
            <option
              key="192"
              value="America/Santa_Isabel"
            >
              America/Santa_Isabel
            </option>
            <option
              key="193"
              value="America/Santarem"
            >
              America/Santarem
            </option>
            <option
              key="194"
              value="America/Santiago"
            >
              America/Santiago
            </option>
            <option
              key="195"
              value="America/Santo_Domingo"
            >
              America/Santo_Domingo
            </option>
            <option
              key="196"
              value="America/Sao_Paulo"
            >
              America/Sao_Paulo
            </option>
            <option
              key="197"
              value="America/Scoresbysund"
            >
              America/Scoresbysund
            </option>
            <option
              key="198"
              value="America/Shiprock"
            >
              America/Shiprock
            </option>
            <option
              key="199"
              value="America/Sitka"
            >
              America/Sitka
            </option>
            <option
              key="200"
              value="America/St_Barthelemy"
            >
              America/St_Barthelemy
            </option>
            <option
              key="201"
              value="America/St_Johns"
            >
              America/St_Johns
            </option>
            <option
              key="202"
              value="America/St_Kitts"
            >
              America/St_Kitts
            </option>
            <option
              key="203"
              value="America/St_Lucia"
            >
              America/St_Lucia
            </option>
            <option
              key="204"
              value="America/St_Thomas"
            >
              America/St_Thomas
            </option>
            <option
              key="205"
              value="America/St_Vincent"
            >
              America/St_Vincent
            </option>
            <option
              key="206"
              value="America/Swift_Current"
            >
              America/Swift_Current
            </option>
            <option
              key="207"
              value="America/Tegucigalpa"
            >
              America/Tegucigalpa
            </option>
            <option
              key="208"
              value="America/Thule"
            >
              America/Thule
            </option>
            <option
              key="209"
              value="America/Thunder_Bay"
            >
              America/Thunder_Bay
            </option>
            <option
              key="210"
              value="America/Tijuana"
            >
              America/Tijuana
            </option>
            <option
              key="211"
              value="America/Toronto"
            >
              America/Toronto
            </option>
            <option
              key="212"
              value="America/Tortola"
            >
              America/Tortola
            </option>
            <option
              key="213"
              value="America/Vancouver"
            >
              America/Vancouver
            </option>
            <option
              key="214"
              value="America/Virgin"
            >
              America/Virgin
            </option>
            <option
              key="215"
              value="America/Whitehorse"
            >
              America/Whitehorse
            </option>
            <option
              key="216"
              value="America/Winnipeg"
            >
              America/Winnipeg
            </option>
            <option
              key="217"
              value="America/Yakutat"
            >
              America/Yakutat
            </option>
            <option
              key="218"
              value="America/Yellowknife"
            >
              America/Yellowknife
            </option>
            <option
              key="219"
              value="Antarctica/Casey"
            >
              Antarctica/Casey
            </option>
            <option
              key="220"
              value="Antarctica/Davis"
            >
              Antarctica/Davis
            </option>
            <option
              key="221"
              value="Antarctica/DumontDUrville"
            >
              Antarctica/DumontDUrville
            </option>
            <option
              key="222"
              value="Antarctica/Macquarie"
            >
              Antarctica/Macquarie
            </option>
            <option
              key="223"
              value="Antarctica/Mawson"
            >
              Antarctica/Mawson
            </option>
            <option
              key="224"
              value="Antarctica/McMurdo"
            >
              Antarctica/McMurdo
            </option>
            <option
              key="225"
              value="Antarctica/Palmer"
            >
              Antarctica/Palmer
            </option>
            <option
              key="226"
              value="Antarctica/Rothera"
            >
              Antarctica/Rothera
            </option>
            <option
              key="227"
              value="Antarctica/South_Pole"
            >
              Antarctica/South_Pole
            </option>
            <option
              key="228"
              value="Antarctica/Syowa"
            >
              Antarctica/Syowa
            </option>
            <option
              key="229"
              value="Antarctica/Troll"
            >
              Antarctica/Troll
            </option>
            <option
              key="230"
              value="Antarctica/Vostok"
            >
              Antarctica/Vostok
            </option>
            <option
              key="231"
              value="Arctic/Longyearbyen"
            >
              Arctic/Longyearbyen
            </option>
            <option
              key="232"
              value="Asia/Aden"
            >
              Asia/Aden
            </option>
            <option
              key="233"
              value="Asia/Almaty"
            >
              Asia/Almaty
            </option>
            <option
              key="234"
              value="Asia/Amman"
            >
              Asia/Amman
            </option>
            <option
              key="235"
              value="Asia/Anadyr"
            >
              Asia/Anadyr
            </option>
            <option
              key="236"
              value="Asia/Aqtau"
            >
              Asia/Aqtau
            </option>
            <option
              key="237"
              value="Asia/Aqtobe"
            >
              Asia/Aqtobe
            </option>
            <option
              key="238"
              value="Asia/Ashgabat"
            >
              Asia/Ashgabat
            </option>
            <option
              key="239"
              value="Asia/Ashkhabad"
            >
              Asia/Ashkhabad
            </option>
            <option
              key="240"
              value="Asia/Atyrau"
            >
              Asia/Atyrau
            </option>
            <option
              key="241"
              value="Asia/Baghdad"
            >
              Asia/Baghdad
            </option>
            <option
              key="242"
              value="Asia/Bahrain"
            >
              Asia/Bahrain
            </option>
            <option
              key="243"
              value="Asia/Baku"
            >
              Asia/Baku
            </option>
            <option
              key="244"
              value="Asia/Bangkok"
            >
              Asia/Bangkok
            </option>
            <option
              key="245"
              value="Asia/Barnaul"
            >
              Asia/Barnaul
            </option>
            <option
              key="246"
              value="Asia/Beirut"
            >
              Asia/Beirut
            </option>
            <option
              key="247"
              value="Asia/Bishkek"
            >
              Asia/Bishkek
            </option>
            <option
              key="248"
              value="Asia/Brunei"
            >
              Asia/Brunei
            </option>
            <option
              key="249"
              value="Asia/Calcutta"
            >
              Asia/Calcutta
            </option>
            <option
              key="250"
              value="Asia/Chita"
            >
              Asia/Chita
            </option>
            <option
              key="251"
              value="Asia/Choibalsan"
            >
              Asia/Choibalsan
            </option>
            <option
              key="252"
              value="Asia/Chongqing"
            >
              Asia/Chongqing
            </option>
            <option
              key="253"
              value="Asia/Chungking"
            >
              Asia/Chungking
            </option>
            <option
              key="254"
              value="Asia/Colombo"
            >
              Asia/Colombo
            </option>
            <option
              key="255"
              value="Asia/Dacca"
            >
              Asia/Dacca
            </option>
            <option
              key="256"
              value="Asia/Damascus"
            >
              Asia/Damascus
            </option>
            <option
              key="257"
              value="Asia/Dhaka"
            >
              Asia/Dhaka
            </option>
            <option
              key="258"
              value="Asia/Dili"
            >
              Asia/Dili
            </option>
            <option
              key="259"
              value="Asia/Dubai"
            >
              Asia/Dubai
            </option>
            <option
              key="260"
              value="Asia/Dushanbe"
            >
              Asia/Dushanbe
            </option>
            <option
              key="261"
              value="Asia/Famagusta"
            >
              Asia/Famagusta
            </option>
            <option
              key="262"
              value="Asia/Gaza"
            >
              Asia/Gaza
            </option>
            <option
              key="263"
              value="Asia/Harbin"
            >
              Asia/Harbin
            </option>
            <option
              key="264"
              value="Asia/Hebron"
            >
              Asia/Hebron
            </option>
            <option
              key="265"
              value="Asia/Ho_Chi_Minh"
            >
              Asia/Ho_Chi_Minh
            </option>
            <option
              key="266"
              value="Asia/Hong_Kong"
            >
              Asia/Hong_Kong
            </option>
            <option
              key="267"
              value="Asia/Hovd"
            >
              Asia/Hovd
            </option>
            <option
              key="268"
              value="Asia/Irkutsk"
            >
              Asia/Irkutsk
            </option>
            <option
              key="269"
              value="Asia/Istanbul"
            >
              Asia/Istanbul
            </option>
            <option
              key="270"
              value="Asia/Jakarta"
            >
              Asia/Jakarta
            </option>
            <option
              key="271"
              value="Asia/Jayapura"
            >
              Asia/Jayapura
            </option>
            <option
              key="272"
              value="Asia/Jerusalem"
            >
              Asia/Jerusalem
            </option>
            <option
              key="273"
              value="Asia/Kabul"
            >
              Asia/Kabul
            </option>
            <option
              key="274"
              value="Asia/Kamchatka"
            >
              Asia/Kamchatka
            </option>
            <option
              key="275"
              value="Asia/Karachi"
            >
              Asia/Karachi
            </option>
            <option
              key="276"
              value="Asia/Kashgar"
            >
              Asia/Kashgar
            </option>
            <option
              key="277"
              value="Asia/Kathmandu"
            >
              Asia/Kathmandu
            </option>
            <option
              key="278"
              value="Asia/Katmandu"
            >
              Asia/Katmandu
            </option>
            <option
              key="279"
              value="Asia/Khandyga"
            >
              Asia/Khandyga
            </option>
            <option
              key="280"
              value="Asia/Kolkata"
            >
              Asia/Kolkata
            </option>
            <option
              key="281"
              value="Asia/Krasnoyarsk"
            >
              Asia/Krasnoyarsk
            </option>
            <option
              key="282"
              value="Asia/Kuala_Lumpur"
            >
              Asia/Kuala_Lumpur
            </option>
            <option
              key="283"
              value="Asia/Kuching"
            >
              Asia/Kuching
            </option>
            <option
              key="284"
              value="Asia/Kuwait"
            >
              Asia/Kuwait
            </option>
            <option
              key="285"
              value="Asia/Macao"
            >
              Asia/Macao
            </option>
            <option
              key="286"
              value="Asia/Macau"
            >
              Asia/Macau
            </option>
            <option
              key="287"
              value="Asia/Magadan"
            >
              Asia/Magadan
            </option>
            <option
              key="288"
              value="Asia/Makassar"
            >
              Asia/Makassar
            </option>
            <option
              key="289"
              value="Asia/Manila"
            >
              Asia/Manila
            </option>
            <option
              key="290"
              value="Asia/Muscat"
            >
              Asia/Muscat
            </option>
            <option
              key="291"
              value="Asia/Nicosia"
            >
              Asia/Nicosia
            </option>
            <option
              key="292"
              value="Asia/Novokuznetsk"
            >
              Asia/Novokuznetsk
            </option>
            <option
              key="293"
              value="Asia/Novosibirsk"
            >
              Asia/Novosibirsk
            </option>
            <option
              key="294"
              value="Asia/Omsk"
            >
              Asia/Omsk
            </option>
            <option
              key="295"
              value="Asia/Oral"
            >
              Asia/Oral
            </option>
            <option
              key="296"
              value="Asia/Phnom_Penh"
            >
              Asia/Phnom_Penh
            </option>
            <option
              key="297"
              value="Asia/Pontianak"
            >
              Asia/Pontianak
            </option>
            <option
              key="298"
              value="Asia/Pyongyang"
            >
              Asia/Pyongyang
            </option>
            <option
              key="299"
              value="Asia/Qatar"
            >
              Asia/Qatar
            </option>
            <option
              key="300"
              value="Asia/Qyzylorda"
            >
              Asia/Qyzylorda
            </option>
            <option
              key="301"
              value="Asia/Rangoon"
            >
              Asia/Rangoon
            </option>
            <option
              key="302"
              value="Asia/Riyadh"
            >
              Asia/Riyadh
            </option>
            <option
              key="303"
              value="Asia/Saigon"
            >
              Asia/Saigon
            </option>
            <option
              key="304"
              value="Asia/Sakhalin"
            >
              Asia/Sakhalin
            </option>
            <option
              key="305"
              value="Asia/Samarkand"
            >
              Asia/Samarkand
            </option>
            <option
              key="306"
              value="Asia/Seoul"
            >
              Asia/Seoul
            </option>
            <option
              key="307"
              value="Asia/Shanghai"
            >
              Asia/Shanghai
            </option>
            <option
              key="308"
              value="Asia/Singapore"
            >
              Asia/Singapore
            </option>
            <option
              key="309"
              value="Asia/Srednekolymsk"
            >
              Asia/Srednekolymsk
            </option>
            <option
              key="310"
              value="Asia/Taipei"
            >
              Asia/Taipei
            </option>
            <option
              key="311"
              value="Asia/Tashkent"
            >
              Asia/Tashkent
            </option>
            <option
              key="312"
              value="Asia/Tbilisi"
            >
              Asia/Tbilisi
            </option>
            <option
              key="313"
              value="Asia/Tehran"
            >
              Asia/Tehran
            </option>
            <option
              key="314"
              value="Asia/Tel_Aviv"
            >
              Asia/Tel_Aviv
            </option>
            <option
              key="315"
              value="Asia/Thimbu"
            >
              Asia/Thimbu
            </option>
            <option
              key="316"
              value="Asia/Thimphu"
            >
              Asia/Thimphu
            </option>
            <option
              key="317"
              value="Asia/Tokyo"
            >
              Asia/Tokyo
            </option>
            <option
              key="318"
              value="Asia/Tomsk"
            >
              Asia/Tomsk
            </option>
            <option
              key="319"
              value="Asia/Ujung_Pandang"
            >
              Asia/Ujung_Pandang
            </option>
            <option
              key="320"
              value="Asia/Ulaanbaatar"
            >
              Asia/Ulaanbaatar
            </option>
            <option
              key="321"
              value="Asia/Ulan_Bator"
            >
              Asia/Ulan_Bator
            </option>
            <option
              key="322"
              value="Asia/Urumqi"
            >
              Asia/Urumqi
            </option>
            <option
              key="323"
              value="Asia/Ust-Nera"
            >
              Asia/Ust-Nera
            </option>
            <option
              key="324"
              value="Asia/Vientiane"
            >
              Asia/Vientiane
            </option>
            <option
              key="325"
              value="Asia/Vladivostok"
            >
              Asia/Vladivostok
            </option>
            <option
              key="326"
              value="Asia/Yakutsk"
            >
              Asia/Yakutsk
            </option>
            <option
              key="327"
              value="Asia/Yangon"
            >
              Asia/Yangon
            </option>
            <option
              key="328"
              value="Asia/Yekaterinburg"
            >
              Asia/Yekaterinburg
            </option>
            <option
              key="329"
              value="Asia/Yerevan"
            >
              Asia/Yerevan
            </option>
            <option
              key="330"
              value="Atlantic/Azores"
            >
              Atlantic/Azores
            </option>
            <option
              key="331"
              value="Atlantic/Bermuda"
            >
              Atlantic/Bermuda
            </option>
            <option
              key="332"
              value="Atlantic/Canary"
            >
              Atlantic/Canary
            </option>
            <option
              key="333"
              value="Atlantic/Cape_Verde"
            >
              Atlantic/Cape_Verde
            </option>
            <option
              key="334"
              value="Atlantic/Faeroe"
            >
              Atlantic/Faeroe
            </option>
            <option
              key="335"
              value="Atlantic/Faroe"
            >
              Atlantic/Faroe
            </option>
            <option
              key="336"
              value="Atlantic/Jan_Mayen"
            >
              Atlantic/Jan_Mayen
            </option>
            <option
              key="337"
              value="Atlantic/Madeira"
            >
              Atlantic/Madeira
            </option>
            <option
              key="338"
              value="Atlantic/Reykjavik"
            >
              Atlantic/Reykjavik
            </option>
            <option
              key="339"
              value="Atlantic/South_Georgia"
            >
              Atlantic/South_Georgia
            </option>
            <option
              key="340"
              value="Atlantic/St_Helena"
            >
              Atlantic/St_Helena
            </option>
            <option
              key="341"
              value="Atlantic/Stanley"
            >
              Atlantic/Stanley
            </option>
            <option
              key="342"
              value="Australia/ACT"
            >
              Australia/ACT
            </option>
            <option
              key="343"
              value="Australia/Adelaide"
            >
              Australia/Adelaide
            </option>
            <option
              key="344"
              value="Australia/Brisbane"
            >
              Australia/Brisbane
            </option>
            <option
              key="345"
              value="Australia/Broken_Hill"
            >
              Australia/Broken_Hill
            </option>
            <option
              key="346"
              value="Australia/Canberra"
            >
              Australia/Canberra
            </option>
            <option
              key="347"
              value="Australia/Currie"
            >
              Australia/Currie
            </option>
            <option
              key="348"
              value="Australia/Darwin"
            >
              Australia/Darwin
            </option>
            <option
              key="349"
              value="Australia/Eucla"
            >
              Australia/Eucla
            </option>
            <option
              key="350"
              value="Australia/Hobart"
            >
              Australia/Hobart
            </option>
            <option
              key="351"
              value="Australia/LHI"
            >
              Australia/LHI
            </option>
            <option
              key="352"
              value="Australia/Lindeman"
            >
              Australia/Lindeman
            </option>
            <option
              key="353"
              value="Australia/Lord_Howe"
            >
              Australia/Lord_Howe
            </option>
            <option
              key="354"
              value="Australia/Melbourne"
            >
              Australia/Melbourne
            </option>
            <option
              key="355"
              value="Australia/NSW"
            >
              Australia/NSW
            </option>
            <option
              key="356"
              value="Australia/North"
            >
              Australia/North
            </option>
            <option
              key="357"
              value="Australia/Perth"
            >
              Australia/Perth
            </option>
            <option
              key="358"
              value="Australia/Queensland"
            >
              Australia/Queensland
            </option>
            <option
              key="359"
              value="Australia/South"
            >
              Australia/South
            </option>
            <option
              key="360"
              value="Australia/Sydney"
            >
              Australia/Sydney
            </option>
            <option
              key="361"
              value="Australia/Tasmania"
            >
              Australia/Tasmania
            </option>
            <option
              key="362"
              value="Australia/Victoria"
            >
              Australia/Victoria
            </option>
            <option
              key="363"
              value="Australia/West"
            >
              Australia/West
            </option>
            <option
              key="364"
              value="Australia/Yancowinna"
            >
              Australia/Yancowinna
            </option>
            <option
              key="365"
              value="Brazil/Acre"
            >
              Brazil/Acre
            </option>
            <option
              key="366"
              value="Brazil/DeNoronha"
            >
              Brazil/DeNoronha
            </option>
            <option
              key="367"
              value="Brazil/East"
            >
              Brazil/East
            </option>
            <option
              key="368"
              value="Brazil/West"
            >
              Brazil/West
            </option>
            <option
              key="369"
              value="CET"
            >
              CET
            </option>
            <option
              key="370"
              value="CST6CDT"
            >
              CST6CDT
            </option>
            <option
              key="371"
              value="Canada/Atlantic"
            >
              Canada/Atlantic
            </option>
            <option
              key="372"
              value="Canada/Central"
            >
              Canada/Central
            </option>
            <option
              key="373"
              value="Canada/East-Saskatchewan"
            >
              Canada/East-Saskatchewan
            </option>
            <option
              key="374"
              value="Canada/Eastern"
            >
              Canada/Eastern
            </option>
            <option
              key="375"
              value="Canada/Mountain"
            >
              Canada/Mountain
            </option>
            <option
              key="376"
              value="Canada/Newfoundland"
            >
              Canada/Newfoundland
            </option>
            <option
              key="377"
              value="Canada/Pacific"
            >
              Canada/Pacific
            </option>
            <option
              key="378"
              value="Canada/Saskatchewan"
            >
              Canada/Saskatchewan
            </option>
            <option
              key="379"
              value="Canada/Yukon"
            >
              Canada/Yukon
            </option>
            <option
              key="380"
              value="Chile/Continental"
            >
              Chile/Continental
            </option>
            <option
              key="381"
              value="Chile/EasterIsland"
            >
              Chile/EasterIsland
            </option>
            <option
              key="382"
              value="Cuba"
            >
              Cuba
            </option>
            <option
              key="383"
              value="EET"
            >
              EET
            </option>
            <option
              key="384"
              value="EST"
            >
              EST
            </option>
            <option
              key="385"
              value="EST5EDT"
            >
              EST5EDT
            </option>
            <option
              key="386"
              value="Egypt"
            >
              Egypt
            </option>
            <option
              key="387"
              value="Eire"
            >
              Eire
            </option>
            <option
              key="388"
              value="Etc/GMT"
            >
              Etc/GMT
            </option>
            <option
              key="389"
              value="Etc/GMT+0"
            >
              Etc/GMT+0
            </option>
            <option
              key="390"
              value="Etc/GMT+1"
            >
              Etc/GMT+1
            </option>
            <option
              key="391"
              value="Etc/GMT+10"
            >
              Etc/GMT+10
            </option>
            <option
              key="392"
              value="Etc/GMT+11"
            >
              Etc/GMT+11
            </option>
            <option
              key="393"
              value="Etc/GMT+12"
            >
              Etc/GMT+12
            </option>
            <option
              key="394"
              value="Etc/GMT+2"
            >
              Etc/GMT+2
            </option>
            <option
              key="395"
              value="Etc/GMT+3"
            >
              Etc/GMT+3
            </option>
            <option
              key="396"
              value="Etc/GMT+4"
            >
              Etc/GMT+4
            </option>
            <option
              key="397"
              value="Etc/GMT+5"
            >
              Etc/GMT+5
            </option>
            <option
              key="398"
              value="Etc/GMT+6"
            >
              Etc/GMT+6
            </option>
            <option
              key="399"
              value="Etc/GMT+7"
            >
              Etc/GMT+7
            </option>
            <option
              key="400"
              value="Etc/GMT+8"
            >
              Etc/GMT+8
            </option>
            <option
              key="401"
              value="Etc/GMT+9"
            >
              Etc/GMT+9
            </option>
            <option
              key="402"
              value="Etc/GMT-0"
            >
              Etc/GMT-0
            </option>
            <option
              key="403"
              value="Etc/GMT-1"
            >
              Etc/GMT-1
            </option>
            <option
              key="404"
              value="Etc/GMT-10"
            >
              Etc/GMT-10
            </option>
            <option
              key="405"
              value="Etc/GMT-11"
            >
              Etc/GMT-11
            </option>
            <option
              key="406"
              value="Etc/GMT-12"
            >
              Etc/GMT-12
            </option>
            <option
              key="407"
              value="Etc/GMT-13"
            >
              Etc/GMT-13
            </option>
            <option
              key="408"
              value="Etc/GMT-14"
            >
              Etc/GMT-14
            </option>
            <option
              key="409"
              value="Etc/GMT-2"
            >
              Etc/GMT-2
            </option>
            <option
              key="410"
              value="Etc/GMT-3"
            >
              Etc/GMT-3
            </option>
            <option
              key="411"
              value="Etc/GMT-4"
            >
              Etc/GMT-4
            </option>
            <option
              key="412"
              value="Etc/GMT-5"
            >
              Etc/GMT-5
            </option>
            <option
              key="413"
              value="Etc/GMT-6"
            >
              Etc/GMT-6
            </option>
            <option
              key="414"
              value="Etc/GMT-7"
            >
              Etc/GMT-7
            </option>
            <option
              key="415"
              value="Etc/GMT-8"
            >
              Etc/GMT-8
            </option>
            <option
              key="416"
              value="Etc/GMT-9"
            >
              Etc/GMT-9
            </option>
            <option
              key="417"
              value="Etc/GMT0"
            >
              Etc/GMT0
            </option>
            <option
              key="418"
              value="Etc/Greenwich"
            >
              Etc/Greenwich
            </option>
            <option
              key="419"
              value="Etc/UCT"
            >
              Etc/UCT
            </option>
            <option
              key="420"
              value="Etc/UTC"
            >
              Etc/UTC
            </option>
            <option
              key="421"
              value="Etc/Universal"
            >
              Etc/Universal
            </option>
            <option
              key="422"
              value="Etc/Zulu"
            >
              Etc/Zulu
            </option>
            <option
              key="423"
              value="Europe/Amsterdam"
            >
              Europe/Amsterdam
            </option>
            <option
              key="424"
              value="Europe/Andorra"
            >
              Europe/Andorra
            </option>
            <option
              key="425"
              value="Europe/Astrakhan"
            >
              Europe/Astrakhan
            </option>
            <option
              key="426"
              value="Europe/Athens"
            >
              Europe/Athens
            </option>
            <option
              key="427"
              value="Europe/Belfast"
            >
              Europe/Belfast
            </option>
            <option
              key="428"
              value="Europe/Belgrade"
            >
              Europe/Belgrade
            </option>
            <option
              key="429"
              value="Europe/Berlin"
            >
              Europe/Berlin
            </option>
            <option
              key="430"
              value="Europe/Bratislava"
            >
              Europe/Bratislava
            </option>
            <option
              key="431"
              value="Europe/Brussels"
            >
              Europe/Brussels
            </option>
            <option
              key="432"
              value="Europe/Bucharest"
            >
              Europe/Bucharest
            </option>
            <option
              key="433"
              value="Europe/Budapest"
            >
              Europe/Budapest
            </option>
            <option
              key="434"
              value="Europe/Busingen"
            >
              Europe/Busingen
            </option>
            <option
              key="435"
              value="Europe/Chisinau"
            >
              Europe/Chisinau
            </option>
            <option
              key="436"
              value="Europe/Copenhagen"
            >
              Europe/Copenhagen
            </option>
            <option
              key="437"
              value="Europe/Dublin"
            >
              Europe/Dublin
            </option>
            <option
              key="438"
              value="Europe/Gibraltar"
            >
              Europe/Gibraltar
            </option>
            <option
              key="439"
              value="Europe/Guernsey"
            >
              Europe/Guernsey
            </option>
            <option
              key="440"
              value="Europe/Helsinki"
            >
              Europe/Helsinki
            </option>
            <option
              key="441"
              value="Europe/Isle_of_Man"
            >
              Europe/Isle_of_Man
            </option>
            <option
              key="442"
              value="Europe/Istanbul"
            >
              Europe/Istanbul
            </option>
            <option
              key="443"
              value="Europe/Jersey"
            >
              Europe/Jersey
            </option>
            <option
              key="444"
              value="Europe/Kaliningrad"
            >
              Europe/Kaliningrad
            </option>
            <option
              key="445"
              value="Europe/Kiev"
            >
              Europe/Kiev
            </option>
            <option
              key="446"
              value="Europe/Kirov"
            >
              Europe/Kirov
            </option>
            <option
              key="447"
              value="Europe/Lisbon"
            >
              Europe/Lisbon
            </option>
            <option
              key="448"
              value="Europe/Ljubljana"
            >
              Europe/Ljubljana
            </option>
            <option
              key="449"
              value="Europe/London"
            >
              Europe/London
            </option>
            <option
              key="450"
              value="Europe/Luxembourg"
            >
              Europe/Luxembourg
            </option>
            <option
              key="451"
              value="Europe/Madrid"
            >
              Europe/Madrid
            </option>
            <option
              key="452"
              value="Europe/Malta"
            >
              Europe/Malta
            </option>
            <option
              key="453"
              value="Europe/Mariehamn"
            >
              Europe/Mariehamn
            </option>
            <option
              key="454"
              value="Europe/Minsk"
            >
              Europe/Minsk
            </option>
            <option
              key="455"
              value="Europe/Monaco"
            >
              Europe/Monaco
            </option>
            <option
              key="456"
              value="Europe/Moscow"
            >
              Europe/Moscow
            </option>
            <option
              key="457"
              value="Europe/Nicosia"
            >
              Europe/Nicosia
            </option>
            <option
              key="458"
              value="Europe/Oslo"
            >
              Europe/Oslo
            </option>
            <option
              key="459"
              value="Europe/Paris"
            >
              Europe/Paris
            </option>
            <option
              key="460"
              value="Europe/Podgorica"
            >
              Europe/Podgorica
            </option>
            <option
              key="461"
              value="Europe/Prague"
            >
              Europe/Prague
            </option>
            <option
              key="462"
              value="Europe/Riga"
            >
              Europe/Riga
            </option>
            <option
              key="463"
              value="Europe/Rome"
            >
              Europe/Rome
            </option>
            <option
              key="464"
              value="Europe/Samara"
            >
              Europe/Samara
            </option>
            <option
              key="465"
              value="Europe/San_Marino"
            >
              Europe/San_Marino
            </option>
            <option
              key="466"
              value="Europe/Sarajevo"
            >
              Europe/Sarajevo
            </option>
            <option
              key="467"
              value="Europe/Saratov"
            >
              Europe/Saratov
            </option>
            <option
              key="468"
              value="Europe/Simferopol"
            >
              Europe/Simferopol
            </option>
            <option
              key="469"
              value="Europe/Skopje"
            >
              Europe/Skopje
            </option>
            <option
              key="470"
              value="Europe/Sofia"
            >
              Europe/Sofia
            </option>
            <option
              key="471"
              value="Europe/Stockholm"
            >
              Europe/Stockholm
            </option>
            <option
              key="472"
              value="Europe/Tallinn"
            >
              Europe/Tallinn
            </option>
            <option
              key="473"
              value="Europe/Tirane"
            >
              Europe/Tirane
            </option>
            <option
              key="474"
              value="Europe/Tiraspol"
            >
              Europe/Tiraspol
            </option>
            <option
              key="475"
              value="Europe/Ulyanovsk"
            >
              Europe/Ulyanovsk
            </option>
            <option
              key="476"
              value="Europe/Uzhgorod"
            >
              Europe/Uzhgorod
            </option>
            <option
              key="477"
              value="Europe/Vaduz"
            >
              Europe/Vaduz
            </option>
            <option
              key="478"
              value="Europe/Vatican"
            >
              Europe/Vatican
            </option>
            <option
              key="479"
              value="Europe/Vienna"
            >
              Europe/Vienna
            </option>
            <option
              key="480"
              value="Europe/Vilnius"
            >
              Europe/Vilnius
            </option>
            <option
              key="481"
              value="Europe/Volgograd"
            >
              Europe/Volgograd
            </option>
            <option
              key="482"
              value="Europe/Warsaw"
            >
              Europe/Warsaw
            </option>
            <option
              key="483"
              value="Europe/Zagreb"
            >
              Europe/Zagreb
            </option>
            <option
              key="484"
              value="Europe/Zaporozhye"
            >
              Europe/Zaporozhye
            </option>
            <option
              key="485"
              value="Europe/Zurich"
            >
              Europe/Zurich
            </option>
            <option
              key="486"
              value="GB"
            >
              GB
            </option>
            <option
              key="487"
              value="GB-Eire"
            >
              GB-Eire
            </option>
            <option
              key="488"
              value="GMT"
            >
              GMT
            </option>
            <option
              key="489"
              value="GMT+0"
            >
              GMT+0
            </option>
            <option
              key="490"
              value="GMT-0"
            >
              GMT-0
            </option>
            <option
              key="491"
              value="GMT0"
            >
              GMT0
            </option>
            <option
              key="492"
              value="Greenwich"
            >
              Greenwich
            </option>
            <option
              key="493"
              value="HST"
            >
              HST
            </option>
            <option
              key="494"
              value="Hongkong"
            >
              Hongkong
            </option>
            <option
              key="495"
              value="Iceland"
            >
              Iceland
            </option>
            <option
              key="496"
              value="Indian/Antananarivo"
            >
              Indian/Antananarivo
            </option>
            <option
              key="497"
              value="Indian/Chagos"
            >
              Indian/Chagos
            </option>
            <option
              key="498"
              value="Indian/Christmas"
            >
              Indian/Christmas
            </option>
            <option
              key="499"
              value="Indian/Cocos"
            >
              Indian/Cocos
            </option>
            <option
              key="500"
              value="Indian/Comoro"
            >
              Indian/Comoro
            </option>
            <option
              key="501"
              value="Indian/Kerguelen"
            >
              Indian/Kerguelen
            </option>
            <option
              key="502"
              value="Indian/Mahe"
            >
              Indian/Mahe
            </option>
            <option
              key="503"
              value="Indian/Maldives"
            >
              Indian/Maldives
            </option>
            <option
              key="504"
              value="Indian/Mauritius"
            >
              Indian/Mauritius
            </option>
            <option
              key="505"
              value="Indian/Mayotte"
            >
              Indian/Mayotte
            </option>
            <option
              key="506"
              value="Indian/Reunion"
            >
              Indian/Reunion
            </option>
            <option
              key="507"
              value="Iran"
            >
              Iran
            </option>
            <option
              key="508"
              value="Israel"
            >
              Israel
            </option>
            <option
              key="509"
              value="Jamaica"
            >
              Jamaica
            </option>
            <option
              key="510"
              value="Japan"
            >
              Japan
            </option>
            <option
              key="511"
              value="Kwajalein"
            >
              Kwajalein
            </option>
            <option
              key="512"
              value="Libya"
            >
              Libya
            </option>
            <option
              key="513"
              value="MET"
            >
              MET
            </option>
            <option
              key="514"
              value="MST"
            >
              MST
            </option>
            <option
              key="515"
              value="MST7MDT"
            >
              MST7MDT
            </option>
            <option
              key="516"
              value="Mexico/BajaNorte"
            >
              Mexico/BajaNorte
            </option>
            <option
              key="517"
              value="Mexico/BajaSur"
            >
              Mexico/BajaSur
            </option>
            <option
              key="518"
              value="Mexico/General"
            >
              Mexico/General
            </option>
            <option
              key="519"
              value="NZ"
            >
              NZ
            </option>
            <option
              key="520"
              value="NZ-CHAT"
            >
              NZ-CHAT
            </option>
            <option
              key="521"
              value="Navajo"
            >
              Navajo
            </option>
            <option
              key="522"
              value="PRC"
            >
              PRC
            </option>
            <option
              key="523"
              value="PST8PDT"
            >
              PST8PDT
            </option>
            <option
              key="524"
              value="Pacific/Apia"
            >
              Pacific/Apia
            </option>
            <option
              key="525"
              value="Pacific/Auckland"
            >
              Pacific/Auckland
            </option>
            <option
              key="526"
              value="Pacific/Bougainville"
            >
              Pacific/Bougainville
            </option>
            <option
              key="527"
              value="Pacific/Chatham"
            >
              Pacific/Chatham
            </option>
            <option
              key="528"
              value="Pacific/Chuuk"
            >
              Pacific/Chuuk
            </option>
            <option
              key="529"
              value="Pacific/Easter"
            >
              Pacific/Easter
            </option>
            <option
              key="530"
              value="Pacific/Efate"
            >
              Pacific/Efate
            </option>
            <option
              key="531"
              value="Pacific/Enderbury"
            >
              Pacific/Enderbury
            </option>
            <option
              key="532"
              value="Pacific/Fakaofo"
            >
              Pacific/Fakaofo
            </option>
            <option
              key="533"
              value="Pacific/Fiji"
            >
              Pacific/Fiji
            </option>
            <option
              key="534"
              value="Pacific/Funafuti"
            >
              Pacific/Funafuti
            </option>
            <option
              key="535"
              value="Pacific/Galapagos"
            >
              Pacific/Galapagos
            </option>
            <option
              key="536"
              value="Pacific/Gambier"
            >
              Pacific/Gambier
            </option>
            <option
              key="537"
              value="Pacific/Guadalcanal"
            >
              Pacific/Guadalcanal
            </option>
            <option
              key="538"
              value="Pacific/Guam"
            >
              Pacific/Guam
            </option>
            <option
              key="539"
              value="Pacific/Honolulu"
            >
              Pacific/Honolulu
            </option>
            <option
              key="540"
              value="Pacific/Johnston"
            >
              Pacific/Johnston
            </option>
            <option
              key="541"
              value="Pacific/Kiritimati"
            >
              Pacific/Kiritimati
            </option>
            <option
              key="542"
              value="Pacific/Kosrae"
            >
              Pacific/Kosrae
            </option>
            <option
              key="543"
              value="Pacific/Kwajalein"
            >
              Pacific/Kwajalein
            </option>
            <option
              key="544"
              value="Pacific/Majuro"
            >
              Pacific/Majuro
            </option>
            <option
              key="545"
              value="Pacific/Marquesas"
            >
              Pacific/Marquesas
            </option>
            <option
              key="546"
              value="Pacific/Midway"
            >
              Pacific/Midway
            </option>
            <option
              key="547"
              value="Pacific/Nauru"
            >
              Pacific/Nauru
            </option>
            <option
              key="548"
              value="Pacific/Niue"
            >
              Pacific/Niue
            </option>
            <option
              key="549"
              value="Pacific/Norfolk"
            >
              Pacific/Norfolk
            </option>
            <option
              key="550"
              value="Pacific/Noumea"
            >
              Pacific/Noumea
            </option>
            <option
              key="551"
              value="Pacific/Pago_Pago"
            >
              Pacific/Pago_Pago
            </option>
            <option
              key="552"
              value="Pacific/Palau"
            >
              Pacific/Palau
            </option>
            <option
              key="553"
              value="Pacific/Pitcairn"
            >
              Pacific/Pitcairn
            </option>
            <option
              key="554"
              value="Pacific/Pohnpei"
            >
              Pacific/Pohnpei
            </option>
            <option
              key="555"
              value="Pacific/Ponape"
            >
              Pacific/Ponape
            </option>
            <option
              key="556"
              value="Pacific/Port_Moresby"
            >
              Pacific/Port_Moresby
            </option>
            <option
              key="557"
              value="Pacific/Rarotonga"
            >
              Pacific/Rarotonga
            </option>
            <option
              key="558"
              value="Pacific/Saipan"
            >
              Pacific/Saipan
            </option>
            <option
              key="559"
              value="Pacific/Samoa"
            >
              Pacific/Samoa
            </option>
            <option
              key="560"
              value="Pacific/Tahiti"
            >
              Pacific/Tahiti
            </option>
            <option
              key="561"
              value="Pacific/Tarawa"
            >
              Pacific/Tarawa
            </option>
            <option
              key="562"
              value="Pacific/Tongatapu"
            >
              Pacific/Tongatapu
            </option>
            <option
              key="563"
              value="Pacific/Truk"
            >
              Pacific/Truk
            </option>
            <option
              key="564"
              value="Pacific/Wake"
            >
              Pacific/Wake
            </option>
            <option
              key="565"
              value="Pacific/Wallis"
            >
              Pacific/Wallis
            </option>
            <option
              key="566"
              value="Pacific/Yap"
            >
              Pacific/Yap
            </option>
            <option
              key="567"
              value="Poland"
            >
              Poland
            </option>
            <option
              key="568"
              value="Portugal"
            >
              Portugal
            </option>
            <option
              key="569"
              value="ROC"
            >
              ROC
            </option>
            <option
              key="570"
              value="ROK"
            >
              ROK
            </option>
            <option
              key="571"
              value="Singapore"
            >
              Singapore
            </option>
            <option
              key="572"
              value="Turkey"
            >
              Turkey
            </option>
            <option
              key="573"
              value="UCT"
            >
              UCT
            </option>
            <option
              key="574"
              value="US/Alaska"
            >
              US/Alaska
            </option>
            <option
              key="575"
              value="US/Aleutian"
            >
              US/Aleutian
            </option>
            <option
              key="576"
              value="US/Arizona"
            >
              US/Arizona
            </option>
            <option
              key="577"
              value="US/Central"
            >
              US/Central
            </option>
            <option
              key="578"
              value="US/East-Indiana"
            >
              US/East-Indiana
            </option>
            <option
              key="579"
              value="US/Eastern"
            >
              US/Eastern
            </option>
            <option
              key="580"
              value="US/Hawaii"
            >
              US/Hawaii
            </option>
            <option
              key="581"
              value="US/Indiana-Starke"
            >
              US/Indiana-Starke
            </option>
            <option
              key="582"
              value="US/Michigan"
            >
              US/Michigan
            </option>
            <option
              key="583"
              value="US/Mountain"
            >
              US/Mountain
            </option>
            <option
              key="584"
              value="US/Pacific"
            >
              US/Pacific
            </option>
            <option
              key="585"
              value="US/Pacific-New"
            >
              US/Pacific-New
            </option>
            <option
              key="586"
              value="US/Samoa"
            >
              US/Samoa
            </option>
            <option
              key="587"
              value="UTC"
            >
              UTC
            </option>
            <option
              key="588"
              value="Universal"
            >
              Universal
            </option>
            <option
              key="589"
              value="W-SU"
            >
              W-SU
            </option>
            <option
              key="590"
              value="WET"
            >
              WET
            </option>
            <option
              key="591"
              value="Zulu"
            >
              Zulu
            </option>
          </InputField>
          <InputField
            help="Changing the language also changes the time format"
            label="Language"
            name="language"
            onChange={[Function]}
            type="select"
            value="en"
          >
            <option
              key="0"
              value="en"
            >
              English US
            </option>
            <option
              key="1"
              value="fr"
            >
              French
            </option>
          </InputField>
        </Col>
        <Col
          md="3"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="12"
        >
          <FormGroup
            tag="div"
          >
            <Label
              className="control-label"
              tag="label"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              Profile picture
            </Label>
            <div>
              <Avatar
                email="alex@gorgias.io"
                google={false}
                name="Alex Plugaru"
                size="100"
                style={Object {}}
                url=""
              />
            </div>
            <br />
            <Connect(FileField)
              noPreview={true}
              onChange={[Function]}
              returnFiles={false}
              uploadType="profile_picture"
            />
            <FormText
              color="muted"
              tag="small"
            >
              The image must be square and weight less than 500kB.
              <br />
              If you don't want to upload your picture here, but have a
               
              <a
                href="https://en.gravatar.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Gravatar
              </a>
               
              account, we'll use it.
            </FormText>
          </FormGroup>
        </Col>
      </Row>
      <Button
        className=""
        color="success"
        tag="button"
        type="submit"
      >
        Save your profile
      </Button>
    </Form>
    <h4>
      Preferences
    </h4>
    <form
      onSubmit={[Function]}
    >
      <FormGroup
        tag="div"
      >
        <BooleanField
          label="Display macros by default on emails"
          name="show_macros"
          onChange={[Function]}
          type="checkbox"
        />
      </FormGroup>
      <div>
        <Button
          className=""
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Save preferences
        </Button>
      </div>
    </form>
  </Container>
</div>
`;
